remedy-adapter/resources/base/remedy-adapter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: remedy-adapter
spec:
  selector:
    app: remedy-adapter
  ports:
  - port: 80
    targetPort: 8080
