remedy-adapter/resources/base/remedy-apadter-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: remedy-adapter
spec:
  subdomain: remedy-adapter
  to:
    kind: Service
    name: remedy-adapter
  tls:
    termination: edge
